# covk

./: .gitignore  .gitmodules  Cargo.toml  Gen.slnx  LICENSE  README.md  gen.ps1
.github/workflows/: build.yml
.misc/: .gitignore  cur_version.txt  target_version.txt
TestParser/: .gitignore  TestParser.csproj  UnitTest1.cs
assets/: Core.slang  Cube.slang  Cube.spv  VulkanLogo.basis.zst  mark.md
covk/: Cargo.toml
covk/examples/: cube.rs
covk/src/: arr.rs  ext_name.rs  generated.rs  handle.rs  lib.rs  raii_hnd.rs  result.rs  safe_hnd.rs  traits.rs  unique.rs  utils.rs  vk.rs  vulkan.rs
covk_sys/: Cargo.toml
covk_sys/examples/: sys_cube.rs
covk_sys/src/: ffi.rs  generated.rs  lib.rs  loader.rs
