[package]
edition = "2024"
name = "covk"
version = "0.1.1-1.4.345"
description = "Unsafe vulkan bindings for Rust"
authors = ["2A5F <U2A5F@outlook.com>"]
repository = "https://github.com/coplt/covk"
readme = "../README.md"
license = "MIT"
keywords = ["vulkan", "no-std", "bindings", "gamedev", "graphics"]
categories = ["api-bindings", "external-ffi-bindings", "game-development", "graphics", "rendering::graphics-api"]
rust-version = "1.93.0"

[features]
default = ["loaded"]
linked = ["covk_sys/linked"]
loaded = ["covk_sys/loaded", "libloading"]

[dependencies]
covk_sys = {workspace = true}
libloading = {workspace = true, optional = true}
uuid = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
zstd = { workspace = true }
basis-universal = { workspace = true }
gpu-allocator = { workspace = true }
ash = { workspace = true }
glam = { workspace = true }
